Use safe-retry on a sample package

--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "build": "turbo build",
     "test": "turbo test",
+    "dev": "turbo dev",
     "ci": "turbo test build"
   },
   "devDependencies": {
