--- a/packages/safe-retry/package.json
+++ b/packages/safe-retry/package.json
@@ -2,12 +2,13 @@
   "name": "safe-retry",
   "private": false,
   "description": "Type-safe retry with configurable exponential backoff",
+  "version": "0.0.1",
+  "license": "MIT",
   "author": {
     "name": "Bruno Paulino",
     "email": "js@bpaulino.com",
     "url": "https://bpaulino.com"
   },
-  "version": "0.0.1",
   "type": "module",
   "main": "./dist/safe-retry.umd.cjs",
   "module": "./dist/safe-retry.js",
