--- a/packages/sample/package.json
+++ b/packages/sample/package.json
@@ -9,7 +9,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "safe-retry": "0.0.1"
+    "safe-retry": "workspace:*"
   },
   "devDependencies": {
     "typescript": "^5.2.2",
