Build package and install jsr

--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -26,6 +26,12 @@ jobs:
         with:
           version: "8.15.1"
           run_install: false
+      
+      name: Build
+      run: pnpm run build
+
+      name: install JSR
+      run: pnpm install -g jsr
 
       - name: Publish package
         run: pnpm --filter="safe-retry" exec jsr publish
