--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -27,6 +27,9 @@ jobs:
           version: "8.15.1"
           run_install: false
       
+      - name: Install dependencies
+        run: pnpm install
+    
       - name: Build
         run: pnpm run build
 
